--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -25,6 +25,26 @@
                 </form>
             </div>
         </div>
+        <div class="col-8 offset-2 ">
+            <h4>Leave a review</h4>
+            <form action="/listings/<%= listing._id %>/reviews" method="POST">
+                <div class="form-group">
+                    <label for="rating">Rating:</label>
+                    <select class="form-control" id="rating" name="review[rating]" style="width:2.5rem;">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="content">Review:</label>
+                    <textarea class="form-control mb-3" id="comment" name="review[comment]" rows="3"></textarea>
+                </div>
+                <button type="submit" class="btn btn-dark" >Submit</button>
+            </form>
+        </div>
     </div>
 </div>
 
