Lets validate our review section

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -27,7 +27,7 @@
         </div>
         <div class="col-8 offset-2 ">
             <h4>Leave a review</h4>
-            <form action="/listings/<%= listing._id %>/reviews" method="POST">
+            <form action="/listings/<%= listing._id %>/reviews" method="POST" novalidate class="needs-validation">
                 <div class="form-group">
                     <label for="rating">Rating:</label>
                     <select class="form-control" id="rating" name="review[rating]" style="width:2.5rem;">
@@ -40,7 +40,7 @@
                 </div>
                 <div class="form-group">
                     <label for="content">Review:</label>
-                    <textarea class="form-control mb-3" id="comment" name="review[comment]" rows="3"></textarea>
+                    <textarea class="form-control mb-3" id="comment" name="review[comment]" rows="3" required></textarea>
                 </div>
                 <button type="submit" class="btn btn-dark" >Submit</button>
             </form>
